Fixing spacing for larger screen sizes

--- a/css/index.css
+++ b/css/index.css
@@ -605,7 +605,7 @@
     max-width: 96%;
     margin-top: 0vw;
     margin-bottom: 2vh;
-    margin-left: -4.8vw;
+    margin-left: -6vw;
   }
   .back2top {
     margin-top: 60px;
@@ -668,7 +668,7 @@
   .slack {
     max-width: 96%;
     margin-bottom: 2vh;
-    margin-left: -4vw;
+    margin-left: -3.5vw;
   }
   .detailtag {
     width: 130px;
